--- a/src/pages/WaveDataManagerSLDS.page
+++ b/src/pages/WaveDataManagerSLDS.page
@@ -44,8 +44,8 @@
 					</span>
 		        </div>
 		        <div class="slds-media__body">
-		            <h1 class="slds-page-header__title slds-truncate slds-align-middle" title="Rohde Corp - 80,000 Widgets">Analytics Demo Data Tool - v1.61</h1>
-		            <p class="slds-text-body_small slds-line-height_reset">Saleforce Einstein Analytics Demo Data Loader</p>
+		            <h1 class="slds-page-header__title slds-truncate slds-align-middle" title="Rohde Corp - 80,000 Widgets">Analytics Demo Data Tool - v1.62</h1>
+		            <p class="slds-text-body_small slds-line-height_reset">Einstein Analytics Demo Data Loader</p>
 		        </div>
 		    </div>
 		</div>
@@ -58,7 +58,7 @@
 
 	            <li class="slds-tabs_default__item" title="FAQ" role="presentation">
 	            	<a class="slds-tabs_default__link" href="javascript:void(0);" role="tab" tabindex="-1" aria-selected="false" aria-controls="tab-default-faq" id="tab-default-faq__item">FAQ</a>
-	            </li>
+				</li>
 	        </ul>
 			
 			<!--Tab 1-->
@@ -484,7 +484,7 @@
 						</ol>
 					</div>
 	        	</div>
-	        </div>
+			</div>
 	    
 	    </div>		
 		<apex:form >
