--- a/src/pages/DeployAnalyticsTemplatesTool.page
+++ b/src/pages/DeployAnalyticsTemplatesTool.page
@@ -48,27 +48,30 @@
 					</span>
 		        </div>
 		        <div class="slds-media__body">
-		            <h1 class="slds-page-header__title slds-truncate slds-align-middle" title="Rohde Corp - 80,000 Widgets">Analytics Demo Data Tool - v1.64</h1>
-		            <p class="slds-text-body_small slds-line-height_reset">Einstein Analytics Demo Templates Deployment</p>
+		            <h1 class="slds-page-header__title slds-truncate slds-align-middle" title="Rohde Corp - 80,000 Widgets">Analytics Demo Data Tool - v2020.25</h1>
+		            <p class="slds-text-body_small slds-line-height_reset">Einstein Analytics Demo Data Loader</p>
 		        </div>
 		    </div>
 		</div>
 		
 	    <div class="slds-tabs_default">
 	        <ul class="slds-tabs_default__nav" role="tablist">
-	            <li class="slds-tabs_default__item slds-is-active slds-has-focus" title="Home" role="presentation">
+	            <li class="slds-tabs_default__item" title="Home" role="presentation">
 	           		<a class="slds-tabs_default__link" href="javascript:void(0);" role="tab" tabindex="0" aria-selected="true" aria-controls="tab-default-home" id="tab-default-home__item">Home</a>
 				</li>
+				<li class="slds-tabs_default__item slds-is-active slds-has-focus" title="Template Deploy" role="presentation">
+					<a class="slds-tabs_default__link" href="javascript:void(0);" role="tab" tabindex="1" aria-selected="true" aria-controls="template-deploy" id="tab-default-deploy__item">Template Deploy</a>
+			 	</li>
 				<li title="Guide" role="presentation" class="false-tab-li">
-					<a class="slds-tabs_default__link" target="_blank" href="https://salesforce.quip.com/MBs7Ag8nXdFh" aria-selected="false" aria-controls="tab-default-home" role="tab" tabindex="-1" id="tab-default-guide__item">Guide</a>
+					<a class="slds-tabs_default__link" target="_blank" href="https://salesforce.quip.com/MBs7Ag8nXdFh" aria-selected="false" role="tab" tabindex="-1" id="tab-default-guide__item">Guide</a>
 				 </li>
 				 <li title="Release Notes" role="presentation" class="false-tab-li">
-					<a class="slds-tabs_default__link" target="_blank" href="https://salesforce.quip.com/5WxHAX5VRCiv" aria-selected="false" aria-controls="tab-default-home" role="tab" tabindex="-1" id="tab-default-releasenotes__item">Release Notes</a>
+					<a class="slds-tabs_default__link" target="_blank" href="https://salesforce.quip.com/5WxHAX5VRCiv" aria-selected="false" role="tab" tabindex="-1" id="tab-default-releasenotes__item">Release Notes</a>
 			 	</li>
 	        </ul>
 			
 			<!--Tab 1-->
-	        <div id="tab-default-home" class="slds-tabs_default__content slds-show" role="tabpanel" aria-labelledby="tab-default-home__item">
+	        <div id="tab-default-template-deploy" class="slds-tabs_default__content slds-show" role="tabpanel" aria-labelledby="tab-default-home__item">
 	        	<!-- Main grid -->
 	        	<div class="slds-grid slds-wrap slds-m-left_large" style="max-width: 1440px">
 	        		<!--Message Panel -->
