--- a/src/pages/WaveDataManagerSLDS.page
+++ b/src/pages/WaveDataManagerSLDS.page
@@ -59,8 +59,8 @@
 	            <li class="slds-tabs_default__item slds-is-active slds-has-focus" title="Home" role="presentation">
 	           		<a class="slds-tabs_default__link" href="javascript:void(0);" role="tab" tabindex="0" aria-selected="true" aria-controls="tab-default-home" id="tab-default-home__item">Home</a>
 				</li>
-				<li class="slds-tabs_default__item" title="Template Deploy" role="presentation">
-					<a class="slds-tabs_default__link" href="javascript:void(0);" role="tab" tabindex="1" aria-selected="false" aria-controls="tab-default-home" id="tab-default-home__item">Template Deploy</a>
+				<li class="slds-tabs_default__item" title="Deploy Template (beta)" role="presentation">
+					<a class="slds-tabs_default__link" href="javascript:void(0);" role="tab" tabindex="1" aria-selected="false" aria-controls="tab-default-template-deploy" id="tab-default-deploy__item">Deploy Template (beta)</a>
 			 	</li>
 				<li title="Guide" role="presentation" class="false-tab-li">
 					<a class="slds-tabs_default__link" target="_blank" href="https://salesforce.quip.com/MBs7Ag8nXdFh" aria-selected="false" aria-controls="tab-default-home" role="tab" tabindex="-1" id="tab-default-guide__item">Guide</a>
@@ -478,7 +478,118 @@
 						</apex:form>
 					</div> <!-- End Right column -->
 				</div> <!-- End Main grid -->
-	        </div> <!-- End Tab 1 -->	    	        
+			</div> <!-- End Tab 1 -->
+			
+			<!--Tab 2-->
+	        <div id="tab-default-template-deploy" class="slds-tabs_default__content slds-show" role="tabpanel" aria-labelledby="tab-default-deploy__item">
+	        	<!-- Main grid -->
+	        	<div class="slds-grid slds-wrap slds-m-left_large" style="max-width: 1440px">
+	        		<!--Message Panel -->
+	        		<div class="slds-col slds-size_1-of-1 slds-m-right_large">
+						<apex:form id="formDeployMessages">
+							<apex:outputPanel rendered="{!errorMessage != ''}">
+								<div class="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_error" role="alert" style="margin:0;">
+								    <span class="slds-assistive-text">error</span>
+								    <span class="slds-icon_container slds-icon-utility-error slds-m-right_small slds-no-flex slds-align-top">
+								    	<svg class="slds-icon slds-icon_small" aria-hidden="true">
+								        	<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{!URLFOR($Asset.SLDS, '/assets/icons/utility-sprite/svg/symbols.svg#error')}"></use>
+								        </svg>
+								    </span>
+								    <h2 class="slds-text-heading_small ">{!errorMessage}</h2>
+								</div>
+							</apex:outputPanel>
+
+							<apex:outputPanel rendered="{!successMessage != ''}">
+								<div class="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_success" role="alert" style="margin:0;">
+								    <span class="slds-assistive-text">success</span>
+								    <span class="slds-icon_container slds-icon-utility-success slds-m-right_small slds-no-flex slds-align-top">
+								    	<svg class="slds-icon slds-icon_small" aria-hidden="true">
+								        	<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{!URLFOR($Asset.SLDS, '/assets/icons/utility-sprite/svg/symbols.svg#success')}"></use>
+								        </svg>
+								    </span>
+								    <h2 class="slds-text-heading_small ">{!successMessage}</h2>
+								</div>
+							</apex:outputPanel>
+
+							<apex:outputPanel rendered="{!warningMessage != ''}">
+								<div class="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_warning" role="alert" style="margin:0;">
+								    <span class="slds-assistive-text">warning</span>
+								    <span class="slds-icon_container slds-icon-utility-warning slds-m-right_small slds-no-flex slds-align-top">
+								    	<svg class="slds-icon slds-icon_small" aria-hidden="true">
+								        	<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{!URLFOR($Asset.SLDS, '/assets/icons/utility-sprite/svg/symbols.svg#warning')}"></use>
+								        </svg>
+								    </span>
+								    <h2 class="slds-text-heading_small ">{!warningMessage}</h2>
+								</div>
+							</apex:outputPanel>
+
+							<apex:outputPanel rendered="{!disabledButton}">
+								<div class="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info" role="alert" style="margin:0;">
+								    <span class="slds-assistive-text">info</span>
+								    <span class="slds-icon_container slds-icon-utility-info slds-m-right_small slds-no-flex slds-align-top">
+								    	<svg class="slds-icon slds-icon_small" aria-hidden="true">
+								        	<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{!URLFOR($Asset.SLDS, '/assets/icons/utility-sprite/svg/symbols.svg#info')}"></use>
+								        </svg>
+								    </span>
+								    <h2 class="slds-text-heading_small ">Do not close or navigate away from the page. Otherwise, the process that is currently running will be stopped.</h2>
+								</div>
+							</apex:outputPanel>
+
+						</apex:form>
+					</div>
+
+	        		<!--Intro section -->
+	        		<div class="slds-col slds-size_1-of-1 slds-m-top_medium slds-m-bottom_large slds-m-right_large">
+						<apex:outputText value="{!genericAppConfiguration.homeHeaderDescription}" escape="false"/>
+					</div>
+	        		<!-- Left column -->
+					<div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-2 slds-p-right_large">
+						
+		  				<apex:form id="frmTemplateDeploy" styleClass="slds-m-vertical_medium slds-form-element">
+				
+							<div class="slds-grid slds-m-vertical_medium">
+								<div class="slds-col slds-size_1-of-2 slds-m-right_large">
+									<label class="slds-form-element__label" for="appTemplate">Select App Template to Deploy:</label>
+						   			<div class="slds-form-element__control ">
+						   				<div class="slds-select_container">
+								   			<apex:selectList styleClass="slds-select appTemplate" value="{!selectedTemplate}" size="1" id="appTemplate">
+												<apex:selectOptions value="{!availableTemplates}"/>
+								   			</apex:selectList>
+							   			</div>
+						   			</div>
+								</div>
+
+								<div class="slds-col">
+									<apex:outputPanel id="emailNotification2" >
+										<apex:outputPanel>
+											<label class="slds-form-element__label">Notify this email when complete:</label>
+											<div class="slds-form-element__control">
+								   				<apex:inputText styleClass="slds-input" value="{!emailAddress}"/>
+								   			</div>
+							   			</apex:outputPanel>
+						   			</apex:outputPanel>
+								</div>
+							</div>
+							<div class="slds-grid slds-m-vertical_medium">
+								<div class="slds-col slds-size_1-of-1">
+
+									<div class="slds-m-vertical_medium">
+							   			<apex:outputPanel id="DeployTemplateButton">
+								   			<apex:commandButton value="Deploy" disabled="{!disabledButton}" styleClass="slds-button slds-button_brand btnInstallApp" action="{!executeDeployTemplate}" />
+
+								   			<apex:outputPanel style="margin-left: 15px;" rendered="{!disabledButton}">
+								   				<apex:image value="{!$Resource.LoadingGif}"/>
+								   			</apex:outputPanel>
+								   		</apex:outputPanel>
+							   		</div>
+
+								</div>
+							</div>
+						</apex:form>
+
+					</div> <!-- End Left column -->
+				</div> <!-- End Main grid -->
+	        </div> <!-- End Tab 2 -->	
 	    
 	    </div>		
 		<apex:form >
